tooling/nargo_cli/tests/snapshots/execution_success/submodules/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QXQqAMAiAszqQTm361lUarfsfoaIGYw+9tA/EP/hAYXiAK6amhqqvZ9DsbtY3My4iOYZMTBsGT6YomhYjIzXdgzFnE4uePKKTcKZDnQ98KM6x8eI/qKcLOt57u+bXVW6u//rFCcsMZwO8AQAA",
  "debug_symbols": "pZBNCoMwEIXvMuss1CJar1KKxDhKICRhTApFvHtHMa0uXHU1P2++N/Bm6LGLY6vt4CZoHjN0pI3RY2uckkE7y9t5EZDGNhAir+CgM+UloQ3Q2GiMgJc0cTuavLRbDZJYzQSg7bmy4aANrt0ifnR2jVblzuZZ+aXLM55f43ldJL6u/uPvxYl/8iSVplNgUEBzW1Y70rIzuIc4RKsOmYa3T0pK3ZNT2EfC1W7T+MEH",
  "file_map": {
    "50": {
      "source": "use my_submodule::my_helper;\n\nfn main(x: u1, y: u1) {\n    my_helper();\n    my_submodule::my_bool_or(x, y);\n}\n\nmod my_submodule {\n    pub fn my_bool_or(x: u1, y: u1) {\n        assert(x | y == 1);\n    }\n\n    pub fn my_helper() {}\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
