tooling/nargo_cli/tests/snapshots/execution_success/submodules/execute__tests__force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUOw7CMAx1aAsEhEAwscAEc4DyGTvQg0RUPUePDhU2dd10ocmTovyc52fHiYIvFLYaMfYj6IJsMuzNMJw8cpmQOlUgna0kK+gH7R2x1+J8vR95DFgLvz75Hya9aUd8HvVfNOMMwH8m/jgMv5kgz7Nq84PwGwk7eYbb5MwmFzYLaH8CnIf2eK3S+emnLaEZr3CsBV+I+uGafOd/49BPvuYY61bEGqjWUso/3TkH7SXMt7zTsSMG118TiTmPqY53z3ilHWEOzd8UV22eDNfNANwfxvzqGvkT6Grn/hNhv8P5TOinHGd/6izv9lRebGmvtijSl10L/hp9NaSgm2++TmM673pfAP7+/0ToOQi/od7d2nEnPGdvbxTJibEIAAA=",
  "debug_symbols": "pZHRisMgEEX/ZZ59ULNu0vxKKcEkkyKICVYXluC/7xibbfpQKPRljtfxzhVmhRH7eO2Mm+YbtOcVem+sNdfOzoMOZnZ0uwLPRdTQCgaiKThtkLxAFMiCakNFShJIVYSvAlXwTUiJwZ7TBY+YYw7B9J1Fe3QBWhetZfCjbdwe3RbtNgbtqcsZoBuJNHAyFvMpsYebv7bW6u4VXP271dt20cjd39Sf+U/yyX8hpQfjnzaR8iRvdG/xLqfohkM3/C57Z9/k4ucBx+gxTzqsk+pZKlbxS8ppfw==",
  "file_map": {
    "50": {
      "source": "use my_submodule::my_helper;\n\nfn main(x: u1, y: u1) {\n    my_helper();\n    my_submodule::my_bool_or(x, y);\n}\n\nmod my_submodule {\n    pub fn my_bool_or(x: u1, y: u1) {\n        assert(x | y == 1);\n    }\n\n    pub fn my_helper() {}\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
